# SecSplitLLM

./: README.md
SecSplitLLM/: algo.txt  issue.py  preprocess_mnli_federated.py  run_all.sh  server_metrics.csv
SecSplitLLM/baselines/fed-ner/: EVALUATION.md  README.md  federated_trainer.py  pyproject.toml
SecSplitLLM/baselines/fed-ner/fed_ner/: __init__.py  client_app.py  fedavg_strategy.py  fl_metrics.csv  metrics.py  ner_model.py  req.txt  server_app.py  task.py
SecSplitLLM/baselines/fed-ner/fullsplitfed/: README.md  pyproject.toml
SecSplitLLM/baselines/fed-ner/fullsplitfed/splitfed/clients/: client_splitfed.py
SecSplitLLM/baselines/fed-ner/fullsplitfed/splitfed/grpc/: split.proto  split_pb2.py  split_pb2_grpc.py
SecSplitLLM/baselines/fed-ner/fullsplitfed/splitfed/models/: __init__.py
SecSplitLLM/baselines/fed-ner/fullsplitfed/splitfed/server/: fedavg_strategy.py  server_fl.py  server_split.py
SecSplitLLM/baselines/fed-ner/fullsplitfed/splitfed/training/: split_trainer.py  utils.py
SecSplitLLM/baselines/fullsplitfed/: README.md  pyproject.toml  requirements.txt
SecSplitLLM/baselines/oldsplitfed/: pyproject.toml
SecSplitLLM/baselines/splitfed/: pyproject.toml  requirements.txt
SecSplitLLM/baselines/splitfed/splitfed/: client_app.py  fedavg_strategy.py  metrics.py  server_app.py  split_model.py  task.py  utils.py
SecSplitLLM/baselines/splitfed/wandb/: latest-run
SecSplitLLM/logs/: training_log.csv
SecSplitLLM/notebooks/benchmarks/bert/: Benchmark_Bert_SST_2.ipynb  README.md
SecSplitLLM/notebooks/bert/: Benchmark_Bert_SST_2.ipynb  README.md
SecSplitLLM/notebooks/gpt-2/: Fine_Tune_bert_base_uncased.ipynb  README.md
SecSplitLLM/split-fed-learning/: requirements.txt  run_all.sh
SecSplitLLM/split-fed-learning/client_data/: global_val_data.pkl
SecSplitLLM/split-fed-learning/clients/: baseline_client.py  client_fl.py  dp_client.py  full_token_client_dp_fl.py  full_token_client_fl.py
SecSplitLLM/split-fed-learning/dp_testing/: dp_client_test.py  dp_server_test.py
SecSplitLLM/split-fed-learning/dp_utils/: dp_utils.py  epsilon_calc.py  max_norm_calc.py
SecSplitLLM/split-fed-learning/grpc_generated/: split.proto  split_pb2_grpc.py
SecSplitLLM/split-fed-learning/models/: full_token_split_bert_model.py  split_bert_model.py  split_bert_model_with_LoRA.py
SecSplitLLM/split-fed-learning/proto-env/: pip-selfcheck.json
SecSplitLLM/split-fed-learning/server/: baseline_fl.py  baseline_grpc.py  fl_server.py  full_token_grpc_dp_server.py  full_token_grpc_server.py  full_token_server_fl.py  grpc_dp_server.py  grpc_server.py  server_fl.py
SecSplitLLM/split-fed-learning_with_smpc/: analyze_federated_metrics.py  clean_server_metrics.py  client_0_val_metrics.csv  client_1_val_metrics.csv  preprocess_sst2_federated.py  run_all.sh  server_metrics.csv  visualize_summary_statistics.py
SecSplitLLM/split-fed-learning_with_smpc/clients/: client_fl.py
SecSplitLLM/split-fed-learning_with_smpc/flwr-env/: pyvenv.cfg
SecSplitLLM/split-fed-learning_with_smpc/grpc_generated/: split_pb2.py
SecSplitLLM/split-fed-learning_with_smpc/metrics/: client_metrics.csv  flower_server_metrics.csv  server_metrics.csv
SecSplitLLM/split-fed-learning_with_smpc/models/: split_bert_model_with_LoRA.py
SecSplitLLM/split-fed-learning_with_smpc/server/: grpc_server.py  server_fl.py
SecSplitLLM/split-fed-learning_with_smpc/smpc/: smpc_aggregator.py
SecSplitLLM/split-fed-smpc/: output_s.txt  preprocess_sst2_federated.py
SecSplitLLM/split-fed-smpc/clients/: baseline_client.py  smpc_client.py
SecSplitLLM/split-fed-smpc/logs/: metric_logger.py
SecSplitLLM/split-fed-smpc/models/: split_bert_LoRA.py  split_bert_model.py
SecSplitLLM/split-fed-smpc/server/: baseline_grpc.py  fl_server.py  fl_smpc_server.py
SecSplitLLM/split-fed-smpc/smpc/: smpc_aggregator.py
SecSplitLLM/training/: train_baseline.py
fed-learning-SMPC/: README.md  pyproject.toml  requirements.txt  run_simulation.sh
fed-learning-SMPC/fed_learning/: __init__.py
fed-learning-SMPC/fed_learning/client_side/: __init__.py  client_lora_smpc.py
fed-learning-SMPC/fed_learning/common/: csv_logger.py
fed-learning-SMPC/fed_learning/server_side/: __init__.py  server_smpc.py
fed-learning-SMPC/fed_learning/smpc/: __init__.py  smpc_aggregator.py
fed-learning-SMPC/fed_learning/training/: __init__.py  smpc_trainer.py
(+31 files in other folders)
