[build-system]
requires = ["hatchling", "setuptools"]
build-backend = "hatchling.build"

[project]
name = "fed-learning"
version = "1.0.0"
description = "Federated Learning for NLP"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]==1.19.0",  
    "torch==2.7.1",               
    "transformers==4.53.1",       
    "datasets==3.1.0",            
    "evaluate==0.4.4",            
    "seqeval",
    "peft",          
    "crypten", 
    "protobuf==4.25.3",      
]

[project.optional-dependencies]
gpu = [
    "torch==2.3.1+cu121",             # GPU version
    "transformers[torch]==4.41.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Alejandro"

[tool.flwr.app.components]
serverapp = "fed_learning.server_side.server_smpc:app"
clientapp = "fed_learning.client_side.client_lora_smpc:app"

[tool.flwr.app.config]
num-server-rounds = 5
local-epochs = 2
batch-size = 5
verbose = true                          # Enable verbose logging
smpc-wolrd-size = 3  # Number of parties in MPC (clients + helpers)

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
simulation.num-client-managers = 3     # Match supernodes count