[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fed-ner"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "wandb",
    "seqeval",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "bhussn"

[tool.flwr.app.components]
serverapp = "fed_ner.server_app:app"
clientapp = "fed_ner.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 15
fraction-fit = 0.5
local-epochs = 2

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
